# HJMedia

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  DEPS  HJMediaOBSExport.bat  README.md  apply_patches.sh  build_android.bat  build_harmony.bat  build_hos.bat  build_hos.sh  build_ios.sh  build_mos.sh  ioscopy.sh  sync_deps.sh
examples/ios/HJMediaUI/: AppDelegate.mm  CMakeLists.txt  HJExport.h  HJFacePointsMadeup.cpp  HJGLImageRenderer.h  HJGLImageRenderer.mm  HJGLView.h  HJGLView.mm  HJOGCommon.h  HJOGFBOCtrl.cpp  HJOGFBOCtrl.h  HJSRGLRenderer.h  HJSRGLRenderer.mm  HJSRGLView.h  HJSRGLView.mm  Info.plist.in  MainMenuViewController.h  MainMenuViewController.mm  README.md  SRViewController.h  SRViewController.mm  SceneDelegate.h  SceneDelegate.mm  ViewController.h  ViewController.mm
examples/ios/HJPlayerDemo/: AppDelegate.mm  CMakeLists.txt  Info.plist.in  MusicPlayerViewController.h  MusicPlayerViewController.mm  SceneDelegate.mm  ViewController.mm
examples/windows/HJMainUI/: CMakeLists.txt  HJMainUI.aps  HJMainUI.cpp  HJMainUI.h  HJMainUI.rc  HJMainUIDlg.cpp  HJMainUIDlg.h  resource.h
examples/windows/HJMediaGraphicUI/: CMakeLists.txt
examples/windows/HJMediaTest/: CMakeLists.txt  HJMediaTest.cpp  HJThreadPool_test.cpp
examples/windows/HJOpencv/: CMakeLists.txt  test.cpp  test.h
examples/windows/XMediaTools/: CMakeLists.txt  HJAudioMixerSeriView.cc  HJAudioMixerSeriView.h  HJAudioMixerView.cc  HJAudioMixerView.h  HJGraphPlayerView.cc  HJGraphPlayerView.h  HJLiveOnLineThumbCapture.h  HJLiveOnLineView.cc  HJLiveOnLineView.h  HJLocalServerView.cc  HJLocalServerView.h  HJPlayerView.cc  HJPlayerView.h  XMediaTools.cc  readme.md
src/comp/: CMakeLists.txt  HJComAudioCapture.cpp  HJComAudioFrameCombine.h  HJComDemuxer.cpp  HJComEvent.cpp  HJComEvent.h  HJComInterleave.h  HJComMediaFrameCvt.h  HJComMuxer.h  HJComObject.cpp  HJComRTMP.cpp  HJComRTMP.h  HJComVideoDecoder.cpp  HJComVideoDecoder.h  HJComVideoEncoder.cpp  HJComVideoRender.cpp  HJComVideoRender.h  HJGraphComObject.cpp  HJGraphComPlayer.h  HJGraphComVideoCapture.cpp  HJGraphComVideoCapture.h
src/comp/graphic/: HJOGBaseShader.cpp  HJOGBaseShader.h  HJOGCommon.cpp  HJOGCommon.h  HJOGCopyShaderStrip.cpp  HJOGCopyShaderStripCompat.cpp  HJOGEGLSurface.cpp  HJOGEGLSurface.h  HJOGFBOCtrl.cpp  HJOGFBOCtrl.h  HJOGPointShader.cpp  HJOGPointShader.h  HJOGShaderCommon.cpp  HJOGShaderCommon.h  HJOGShaderProgram.cpp  HJOGShaderProgram.h  HJOGUtils.h  HJPBORead.cpp  HJPBORead.h  HJPBOReadWrapper.cpp  HJPBOReadWrapper.h
src/comp/include/: HJPrioUtils.h
src/comp/prio/: HJPrioCom.cpp  HJPrioCom.h  HJPrioComFBOBase.cpp  HJPrioComFBOBase.h  HJPrioComFBOBlur.cpp  HJPrioComFBOBlur.h  HJPrioComFBOBridgeSrc.cpp  HJPrioComFBOBridgeSrc.h  HJPrioComFBOBridgeSrcEx.cpp  HJPrioComFBOBridgeSrcEx.h  HJPrioComFBOGray.cpp  HJPrioComFBOGray.h  HJPrioComFaceu.cpp  HJPrioComFaceu.h  HJPrioComGiftSeq.cpp  HJPrioComGiftSeq.h  HJPrioComSourceBridge.cpp  HJPrioComSourceBridge.h  HJPrioComSourcePingPongFBO.cpp  HJPrioComSourcePingPongFBO.h  HJPrioComSourceSeries.cpp  HJPrioComSourceSeries.h  HJPrioComSourceSplitScreen.cpp  HJPrioComSourceSplitScreen.h  HJPrioGraph.cpp  HJPrioGraph.h  HJPrioGraphBaseEGL.cpp  HJPrioGraphBaseEGL.h  HJPrioGraphProc.cpp  HJPrioGraphProc.h  HJPrioUtils.h
src/comp/rte/: HJRteCom.cpp  HJRteCom.h  HJRteComDraw.cpp  HJRteComDraw.h  HJRteComDrawDenoiseFilter.cpp  HJRteComDrawSRFilter.cpp  HJRteComPain.cpp  HJRteComPain.h  HJRteComSource.cpp  HJRteComSource.h  HJRteComSourceBridge.cpp  HJRteComSourceBridge.h  HJRteComSourceBridgeMediaData.cpp  HJRteComSourceFaceu.cpp  HJRteComSourceImage.cpp  HJRteComSourceImageSeq.cpp  HJRteGraph.cpp  HJRteGraph.h  HJRteGraphBaseEGL.cpp  HJRteGraphBaseEGL.h  HJRteGraphNodeInfo.h  HJRteGraphProc.cpp  HJRteGraphProc.h  HJRteGraphProcConfigSetup.cpp  HJRteGraphProcPlaceHolderDefault.cpp  HJRteGraphProcSplictScreen.cpp  HJRteGraphProcTest.cpp  HJRteGraphSetupInfo.cpp  HJRteGraphSetupInfo.h  HJRteUtils.cpp  HJRteUtils.h
src/comp/utils/: HJFBOCtrlPool.cpp  HJFBOCtrlPool.h  HJFacePointMgr.cpp  HJFacePointMgr.h  HJFacePointsInfo.h  HJFacePointsMadeup.cpp  HJFacePointsMadeup.h  HJFaceuInfo.cpp  HJFaceuInfo.h  HJFboLease.cpp  HJFboLease.h  HJImgSeqInfo.cpp  HJImgSeqInfo.h
src/detect/: CMakeLists.txt
src/detect/ncnn/: HJFaceDetectNCNNRetinaface.cc  HJFaceDetectNCNNRetinaface.h  HJFaceDetectNCNNScrfd.cc  HJFaceDetectNCNNScrfd.h  HJSRNCNNPlainUSR.cc  HJSRNCNNPlainUSR.h  HJSRNCNNRealCUGAN.cc  HJSRNCNNRealCUGAN.h  HJSRNCNNRealESRGAN.cc  HJSRNCNNRealESRGAN.h
src/detect/tnn/: HJFaceDetectTNNAligner.cc  HJFaceDetectTNNAligner.h  HJFaceDetectTNNBlazeFace.cc  HJFaceDetectTNNBlazeFace.h
src/detect/utils/: HJBaseFaceDetect.cc  HJBaseFaceDetect.h  HJBaseVideoSR.cc  HJBaseVideoSR.h  HJDetectUtils.cpp  HJDetectUtils.h  HJRetinaFaceDecodeUtils.cc  HJRetinaFaceDecodeUtils.h  HJSRUtils.h
src/entry/inference/: CMakeLists.txt  HJFaceDetectExport.cpp  HJFaceDetectExport.h  HJInferenceContextExport.cpp  HJInferenceContextExport.h  HJVideoSRExport.cpp  HJVideoSRExport.h
src/entry/inferenceRender/: CMakeLists.txt
src/gui/: CMakeLists.txt  HJApplication.cc  HJApplication.h  HJFileDialog.cc  HJFileDialog.h  HJFileDialogView.cc  HJFileDialogView.h  HJGuis.h  HJImage.cc  HJImage.h  HJImguiUtils.h  HJView.cc  HJView.h  HJWindow.cc  HJWindow.h
src/media/: CMakeLists.txt  HJAVUtils.cc  HJAVUtils.h  HJAudioConverter.cc  HJAudioConverter.h  HJAudioDeclicker.h  HJAudioFifo.cc  HJAudioFifo.h  HJAudioMixer.cc  HJAudioMixer.h  HJAudioProcessor.cc  HJAudioProcessor.h  HJAutoCacheController.cpp  HJAutoCacheController.h  HJBSFParser.cc  HJBSFParser.h  HJBaseParser.h  HJCacheObserver.cc  HJCacheObserver.h  HJFFHeaders.h  HJFFUtils.cc  HJFFUtils.h  HJFrameInterweaver.cc  HJFrameInterweaver.h  HJFrameParser.cc  HJFrameParser.h  HJH2645Parser.cc  HJH2645Parser.h  HJImageWriter.cc  HJImageWriter.h  HJMediaFrame.cc  HJMediaFrame.h  HJMediaInfo.cc  HJMediaInfo.h  HJMedias.h  HJMov2Live.cc  HJMov2Live.h  HJPacketChecker.cc  HJPacketChecker.h  HJTrackInfo.h  (+6 more)
src/platform/: CMakeLists.txt
(+1207 files in other folders)
